--- a/staging/assets/css/default.css
+++ b/staging/assets/css/default.css
@@ -47,8 +47,8 @@
     --hero-bg-color: #111117;
     --footer-brand-height: 80px;
 
-    --primary-color: #058283;
-    --secondary-color: #00a6a6;
+    --primary-color: rgb(21, 57, 95);
+    --secondary-color: #e9be74;
     
     --white-color: #ffffff;
     --black-color: #000007;
