--- a/staging/assets/css/default.css
+++ b/staging/assets/css/default.css
@@ -43,6 +43,7 @@
     --nav-sub-bg-color: #21333e;
     --nav-holder-bg-color: #21333e;
     --nav-brand-height: 35px;
+    --nav-brand-width: 350px;
     --nav-item-color: #f9f9f9;
     --hero-bg-color: #111117;
     --footer-brand-height: 80px;
