--- a/staging/assets/css/main.css
+++ b/staging/assets/css/main.css
@@ -2852,6 +2852,7 @@ header .navbar-expand .navbar-brand .featured .first {
     position: relative;
     z-index: 1;
     width: 100%;
+    height: 100%;
     padding: 45px;
     border-radius: 10px;
     border: none;
